# ai-optimize-wealth-strategist

./: .gitignore  README.md  env.example  pyproject.toml  run.bat
src/: __init__.py  main.py
src/agents/: __init__.py  canadian_core.py  debt_strategy.py  dividend_growth.py  esg.py  estate_planning.py  factor_investing.py  global_macro.py  insurance_planning.py  passive_indexing.py  portfolio_auditor.py  portfolio_manager.py  rebalancer.py  retirement_planner.py  risk_profiler.py  sentiment_market_context.py  tactical_allocation.py  tax_optimization.py
src/agents/economic/: __init__.py  fred_agent.py
src/agents/market_data/: __init__.py  base_agent.py  polygon_agent.py  technical_indicators_agent.py  yfinance_agent.py
src/agents/news/: __init__.py  finnhub_agent.py  forex_news_agent.py  fxstreet_agent.py  newsapi_us_agent.py
src/data/: __init__.py  market_data_service.py  models.py
src/graph/: __init__.py  state.py
src/llm/: __init__.py  api_models.json  models.py  ollama_models.json
src/tools/: __init__.py
src/utils/: __init__.py  analysts.py  display.py  llm.py  ollama.py  progress.py  visualize.py
